--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -303,11 +303,7 @@
         android:id="@+id/starred1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="selectFab1"
-        fab:fab_icon="@drawable/ic_baseline_notifications_off_24px"
-        fab:fab_colorNormal="@color/colorAccent"
-        fab:fab_colorPressed="@color/redAccent"
+        android:visibility="gone"
         app:fab_size="normal"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="168dp"
@@ -319,10 +315,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:onClick="selectFab2"
-        fab:fab_icon="@drawable/ic_baseline_notifications_none_24px"
-        fab:fab_colorNormal="@color/colorAccent"
-        fab:fab_colorPressed="@color/redAccent"
+        android:visibility="gone"
         app:fab_size="normal"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="168dp"
