--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,7 +28,7 @@
 
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_baseline_settings_20px"
+                android:icon="@drawable/ic_logout"
                 android:title="@string/log_out" />
         </menu>
     </item>
